<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/imie"
        android:textSize="20sp"
        android:layout_marginTop="23dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/nazwisko"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toStartOf="@+id/etSurname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"/>
    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/liczba_ocen"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toStartOf="@+id/etNubmers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSurname"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/imie_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nazwisko_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSurname"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etNubmers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/liczba_ocen_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvNumber"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <Button
        android:id="@+id/btnOceny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/oceny"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNubmers"
        tools:ignore="ExtraText"
        tools:layout_editor_absoluteX="358dp"
        tools:layout_editor_absoluteY="267dp" />

</androidx.constraintlayout.widget.ConstraintLayout>